Changed few grammatical errors

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
-                    <p>I grew up across multiple cities in India before moving to Ireland, where I completed my Junior and Leaving Certificate. I achieved 613 points out of 625—a result I was genuinely happy with.</p>
-                    <p>At 13, I started taking software development courses and spent countless hours building games and projects in Python and Java. It was less about formal learning and more about exploration. Around the same time, a friend and I bought a cheap 3D printer—he was visiting abroad and brought it back to Ireland—and decided to build a drone from scratch. The process was messy—things broke, we rebuilt, we learned as we went—but eventually, we got it flying.</p>
-                    <p>I thought mechanical engineering would be my path. I loved the hands-on building. But through building that drone, I realized what really drew me in wasn't just the mechanics—it was the decision-making, the intelligence behind the movement. That's when electronics clicked for me.</p>
+                    <p>I grew up across multiple cities in India before moving to Ireland, where I completed my Junior and Leaving Certificate. I achieved 613 points out of 625, a result I was genuinely happy with.</p>
+                    <p>At 13, I started taking software development courses and spent countless hours building games and projects in Python and Java. It was less about formal learning and more about exploration. Around the same time, a friend and I bought a cheap 3D printer (he was visiting abroad and brought it back to Ireland) and decided to build a drone from scratch. The process was messy, things broke, we rebuilt, we learnt as we went, but we got it flying.</p>
+                    <p>I thought mechanical engineering would be my path. I loved the hands-on building. But through building that drone, I realised what really drew me in wasn't just the mechanics, it was the decision-making, the intelligence behind the movement. That's when electronics clicked for me.</p>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
-                    <p>Moving between cultures taught me to adapt and see problems from different angles. Those early programming projects at 13 were just for fun—I had no idea they'd shape my career. Building that drone was a turning point. I loved the mechanical work, but I realized my passion was in making things think, not just move. Electronics became where hardware met intelligence, and that's where I found myself.</p>
+                    <p>Moving between cultures taught me to adapt and see problems from different angles. Those early programming projects at 13 were just for fun, I had no idea they'd shape my career. Building that drone was a turning point. I loved the mechanical work, but I realised my passion was in making things think, not just move. Electronics became where hardware met intelligence, and that's where I found myself.</p>
                 </div>
             </div>
         </div>
@@ -61,12 +61,12 @@
                 <div class="work-section">
                     <h3>What I Did</h3>
                     <p>Choosing engineering made sense given my interests, but I only truly understood what that meant when I joined Formula Trinity Autonomous in 2021. That's where engineering became real for me.</p>
-                    <p>I worked on control systems—developing PID controllers, Model Predictive Control, Pure Pursuit algorithms—the systems that allow an autonomous car to make decisions. The work was challenging, often requiring late nights debugging code that refused to cooperate. Over time, I led the control department, and in 2024, became Captain of Formula Trinity AI.</p>
-                    <p>Three years at Formula Student UK taught me what persistence really means. We faced failure after failure, but at Silverstone 2024, we completed our first lap. We won Best Design. And we won Most Cones Knocked—an award that might sound amusing, but represents every iteration, every mistake we learned from. Those cones were our teachers.</p>
+                    <p>I worked on control systems, developing PID controllers, Model Predictive Control, Pure Pursuit algorithms, the systems that allow an autonomous car to make decisions. The work was challenging, often requiring late nights debugging code that refused to cooperate. Over time, I led the control department, and in 2024, became Captain of Formula Trinity AI.</p>
+                    <p>Three years at Formula Student UK taught me what persistence really means. We faced failure after failure, but at Silverstone 2024, we completed our first lap. We won Best Design. And we won Most Cones Knocked, an award that might sound amusing, but represents every iteration, every mistake we learnt from. Those cones were our teachers.</p>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
-                    <p>This is one of the experiences I'm most proud of, not because of the awards, but because of what it took to get there. Three years of failures, rebuilds, and late nights. When we completed that lap at Silverstone, it felt like every setback had meaning. The friendships I built—the people who stayed until 3 AM debugging controller code with me—those are what I carry forward. Formula Trinity taught me that progress matters more than perfection.</p>
+                    <p>This is one of the experiences I'm most proud of, not because of the awards, but because of what it took to get there. Three years of failures, rebuilds, and late nights. When we completed that lap at Silverstone, it felt like every setback had meaning. The friendships I built, the people who stayed until 3 AM debugging controller code with me, those are what I carry forward. Formula Trinity taught me that progress matters more than perfection.</p>
                 </div>
             </div>
         </div>
@@ -80,12 +80,12 @@
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
-                    <p>I was awarded the Laidlaw Research and Leadership Scholarship to conduct research under the supervision of Prof. Harun Siljak. The focus was on adaptive network systems—investigating whether we could control and stabilize complex networks using just a few strategically placed adaptive nodes, rather than trying to control every component.</p>
-                    <p>We designed adaptive models and ran extensive simulations. The work showed that minimal, well-placed intervention can achieve significant stability and synchronization in complex systems. The research resulted in published reflections and a poster presentation on the effectiveness of adaptive controllable nodes.</p>
+                    <p>I was awarded the Laidlaw Research and Leadership Scholarship to conduct research under the supervision of Prof. Harun Siljak. The focus was on adaptive network systems, investigating whether we could control and stabilise complex networks using just a few strategically placed adaptive nodes, rather than trying to control every component.</p>
+                    <p>We designed adaptive models and ran extensive simulations. The work showed that minimal, well-placed intervention can achieve significant stability and synchronisation in complex systems. The research resulted in published reflections and a poster presentation on the effectiveness of adaptive controllable nodes.</p>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
-                    <p>Research taught me patience. Not every idea works, and that's part of the process. Working with Prof. Siljak showed me the elegance of complex systems—the idea that you don't need complete control to achieve stability. A few strategic nodes can synchronize an entire network. It's a concept that changed how I think about control, not just in networks, but in how I approach problems.</p>
+                    <p>Research taught me patience. Not every idea works, and that's part of the process. Working with Prof. Siljak showed me the elegance of complex systems, the idea that you don't need complete control to achieve stability. A few strategic nodes can synchronise an entire network. It's a concept that changed how I think about control, not just in networks, but in how I approach problems.</p>
                 </div>
             </div>
         </div>
@@ -99,13 +99,13 @@
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
-                    <p>While studying full-time in Dublin, I needed to support myself. I briefly worked at a local pub, which taught me quickly to respect the pace and demands of hospitality work—it wasn't for me.</p>
-                    <p>I then joined RampInfoTech, a startup providing digital transformation and automation solutions. Working as both a developer and product manager, I learned to bridge technical implementation with client needs. I developed a Container Tracking Automation system that eliminated over 400 hours of manual work, tracking 4000+ shipments in real-time. I also built an internal Travel and Expense Management tool. The technical skills—Python, Power BI, SQL, API development—were valuable, but learning to communicate effectively and collaborate across distributed teams was equally important.</p>
-                    <p>In Zagreb, Croatia, I worked with Radiona.org, a non-profit focused on democratizing access to technology. I contributed to open-source FPGA development on the ULX3S board, adapting a super-resolution deep learning model to run on resource-constrained Lattice ECP5 FPGAs. The goal was to prove that advanced computation doesn't require expensive hardware. I designed and verified digital logic in Verilog and helped create accessible resources for first-time FPGA developers.</p>
+                    <p>While studying full-time in Dublin, I needed to support myself. I briefly worked at a local pub, which taught me quickly to respect the pace and demands of hospitality work. It wasn't for me.</p>
+                    <p>I then joined RampInfoTech, a startup providing digital transformation and automation solutions. Working as both a developer and product manager, I learnt to bridge technical implementation with client needs. I developed a Container Tracking Automation system that eliminated over 400 hours of manual work, tracking 4000+ shipments in real-time. I built an internal Travel and Expense Management tool as well. The technical skills (Python, Power BI, SQL, API development) were valuable, but learning to communicate effectively and collaborate across distributed teams was just as important.</p>
+                    <p>In Zagreb, Croatia, I worked with Radiona.org, a non-profit focused on democratising access to technology. I contributed to open-source FPGA development on the ULX3S board, adapting a super-resolution deep learning model to run on resource-constrained Lattice ECP5 FPGAs. The goal was to prove that advanced computation doesn't require expensive hardware. I designed and verified digital logic in Verilog and helped create accessible resources for first-time FPGA developers.</p>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
-                    <p>At RampInfoTech, I learned that solving real problems for real people requires more than just writing code—it requires understanding needs, iterating on feedback, and building solutions that actually work in practice. The work in Croatia felt meaningful in a different way. Access to tools shapes who gets to innovate, and contributing to making powerful technology more accessible felt like engineering with purpose.</p>
+                    <p>At RampInfoTech, I learnt that solving real problems for real people requires more than just writing code. It requires understanding needs, iterating on feedback, and building solutions that work in practice. The work in Croatia felt meaningful in a different way. Access to tools shapes who gets to innovate, and contributing to making powerful technology more accessible felt like engineering with purpose.</p>
                 </div>
             </div>
         </div>
@@ -119,9 +119,9 @@
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
-                    <p>I completed a placement at Jaguar Land Rover with the Assisted and Autonomous Driving team, specifically within AI Onboard Perception. The team develops perception tools using onboard vehicle sensors to enable autonomous capabilities.</p>
-                    <p>My work involved reading research papers, contributing to IP and patent discussions, and writing optimized code for data engineering, synthetic dataset generation, and AI/ML model training. I was mentored by experienced engineers who shaped how I approach complex technical problems.</p>
-                    <p>I developed a multi-sensor fusion visualization tool that unified data from cameras, lidar, radar, and ultrasonic sensors into a single view. This helped identify edge cases, detect faults, and improve our detection systems.</p>
+                    <p>I completed a placement at Jaguar Land Rover with the Assisted and Autonomous Driving team, within AI Onboard Perception. The team develops perception tools using onboard vehicle sensors to enable autonomous capabilities.</p>
+                    <p>My work involved reading research papers, contributing to IP and patent discussions, and writing optimised code for data engineering, synthetic dataset generation, and AI/ML model training. I was mentored by experienced engineers who shaped how I approach complex technical problems.</p>
+                    <p>I developed a multi-sensor fusion visualisation tool that unified data from cameras, lidar, radar, and ultrasonic sensors into a single view. This helped identify edge cases, detect faults, and improve our detection systems.</p>
                     <p>During JLR's ACES Challenge, our team developed a mesh-based distributed network for high-security convoy vehicles, enabling automated re-routing, threat detection, and secure communication. We built a simulated proof of concept and demonstrated it on real vehicles. We won the competition and received the award for Most Innovative.</p>
                 </div>
                 <div class="genuine-section">
@@ -140,13 +140,13 @@
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
-                    <p>I'm currently in my final year—my Masters year at Trinity College Dublin, working on Electronic & Computer Engineering.</p>
-                    <p>My thesis focuses on transistor parasitic model extraction for GaN FETs, aiming to improve device modeling accuracy. It's highly specialized work combining hardware design, simulation, and precision engineering.</p>
-                    <p>As part of my coursework, I'm also developing a Vision Transformer for a hybrid Quantum Deep Learning network—exploring the intersection of quantum computing and machine learning.</p>
+                    <p>I'm currently in my final year, my Masters year at Trinity College Dublin, working on Electronic & Computer Engineering.</p>
+                    <p>My thesis focuses on transistor parasitic model extraction for GaN FETs, aiming to improve device modelling accuracy. It's highly specialised work combining hardware design, simulation, and precision engineering.</p>
+                    <p>As part of my coursework, I'm developing a Vision Transformer for a hybrid Quantum Deep Learning network, exploring the intersection of quantum computing and machine learning.</p>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
-                    <p>Everything I've done has led to this point. My thesis on GaN FET modeling brings together the hardware work and precision I've developed through years of FPGA development and embedded systems. The quantum deep learning project pushes me into new territory, much like I pushed into programming at 13. From building a drone in my room to modeling transistors at the device level—the journey has been about staying curious and committed. I'm ready to see where the next chapter takes me.</p>
+                    <p>Everything I've done has led to this point. My thesis on GaN FET modelling brings together the hardware work and precision I've developed through years of FPGA development and embedded systems. The quantum deep learning project pushes me into new territory, much like I pushed into programming at 13. From building a drone in my room to modelling transistors at the device level, the journey has been about staying curious and committed. I'm ready to see where the next chapter takes me.</p>
                 </div>
             </div>
         </div>
