--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                     <h3>What I Did</h3>
                     <p>I grew up across multiple cities in India before moving to Ireland, where I completed my Junior and Leaving Certificate. I achieved 613 points out of 625, a result I was genuinely happy with.</p>
                     <p>At 13, I started taking software development courses and spent countless hours building games and projects in Python and Java. It was less about formal learning and more about exploration. Around the same time, a friend and I bought a cheap 3D printer (he was visiting abroad and brought it back to Ireland) and decided to build a drone from scratch. The process was messy, things broke, we rebuilt, we learnt as we went, but we got it flying.</p>
+                    <div class="chapter-images">
+                        <img src="img/chap1_3dprint.jpeg" alt="3D Printer" class="chapter-img">
+                        <img src="img/chap1_drone.jpeg" alt="Drone Build" class="chapter-img">
+                    </div>
                     <p>I thought mechanical engineering would be my path. I loved the hands-on building. But through building that drone, I realised what really drew me in wasn't just the mechanics, it was the decision-making, the intelligence behind the movement. That's when electronics clicked for me.</p>
                 </div>
                 <div class="genuine-section">
@@ -80,8 +84,18 @@
                 <div class="work-section">
                     <h3>What I Did</h3>
                     <p>Choosing engineering made sense given my interests, but I only truly understood what that meant when I joined Formula Trinity Autonomous in 2021. That's where engineering became real for me.</p>
+                    <div class="chapter-images">
+                        <img src="img/Chap2_FT_LOGO.png" alt="Formula Trinity Logo" class="chapter-img">
+                    </div>
                     <p>I worked on control systems, developing PID controllers, Model Predictive Control, Pure Pursuit algorithms, the systems that allow an autonomous car to make decisions. The work was challenging, often requiring late nights debugging code that refused to cooperate. Over time, I led the control department, and in 2024, became Captain of Formula Trinity AI.</p>
+                    <div class="chapter-images">
+                        <img src="img/chap2_FT-Team.jpeg" alt="Formula Trinity Team" class="chapter-img">
+                        <img src="img/chap2_FT_Award_best_design.jpeg" alt="Best Design Award" class="chapter-img">
+                    </div>
                     <p>Three years at Formula Student UK taught me what persistence really means. We faced failure after failure, but at Silverstone 2024, we completed our first lap. We won Best Design. And we won Most Cones Knocked, an award that might sound amusing, but represents every iteration, every mistake we learnt from. Those cones were our teachers.</p>
+                    <div class="chapter-images">
+                        <img src="img/chap2_Meeting_IEEE_President.jpeg" alt="Meeting IEEE President" class="chapter-img">
+                    </div>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
@@ -142,6 +156,9 @@
                     <p>My work involved reading research papers, contributing to IP and patent discussions, and writing optimised code for data engineering, synthetic dataset generation, and AI/ML model training. I was mentored by experienced engineers who shaped how I approach complex technical problems.</p>
                     <p>I developed a multi-sensor fusion visualisation tool that unified data from cameras, lidar, radar, and ultrasonic sensors into a single view. This helped identify edge cases, detect faults, and improve our detection systems.</p>
                     <p>During JLR's ACES Challenge, our team developed a mesh-based distributed network for high-security convoy vehicles, enabling automated re-routing, threat detection, and secure communication. We built a simulated proof of concept and demonstrated it on real vehicles. We won the competition and received the award for Most Innovative.</p>
+                    <div class="chapter-images">
+                        <img src="img/Chap5_JLR_Award.jpeg" alt="JLR ACES Challenge Award" class="chapter-img">
+                    </div>
                 </div>
                 <div class="genuine-section">
                     <h3>Genuine Reflections</h3>
