--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
+        <img src="img/My_picture.jpeg" alt="Advik Bahadur" class="profile-picture">
         <h1 class="hero-title">Advik Bahadur</h1>
         <p class="hero-subtitle">View my journey</p>
         <div class="scroll-indicator">
